--- a/opensrp-chw-hiv/src/main/AndroidManifest.xml
+++ b/opensrp-chw-hiv/src/main/AndroidManifest.xml
@@ -12,5 +12,9 @@
             android:name="org.smartregister.chw.hiv.activity.BaseHivProfileActivity"
             android:theme="@style/ChwHivTheme.NoActionBar"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+        <activity
+            android:name="org.smartregister.chw.hiv.activity.BaseHivFollowUpVisitActivity"
+            android:theme="@style/ChwHivTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
     </application>
 </manifest>
