--- a/opensrp-chw-hiv/build.gradle
+++ b/opensrp-chw-hiv/build.gradle
@@ -101,7 +101,7 @@ dependencies {
         exclude group: 'org.smartregister', module: 'opensrp-client-native-form'
     }
 
-    implementation("com.nerdstone:neat-form-core:1.1.0-Testing") {
+    implementation("com.nerdstone:neat-form-core:1.1.2") {
         transitive = true
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'androidx.appcompat', module: 'appcompat'
