--- a/opensrp-chw-hiv/build.gradle
+++ b/opensrp-chw-hiv/build.gradle
@@ -101,7 +101,7 @@ dependencies {
         exclude group: 'org.smartregister', module: 'opensrp-client-native-form'
     }
 
-    implementation("com.nerdstone:neat-form-core:1.1.2") {
+    api("com.nerdstone:neat-form-core:1.1.2") {
         transitive = true
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'androidx.appcompat', module: 'appcompat'
@@ -130,8 +130,8 @@ dependencies {
     }
 
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.core:core-ktx:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
+    implementation "androidx.core:core-ktx:1.3.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     // compatibility issue when upgraded to 1.1.*
     implementation 'androidx.appcompat:appcompat:1.0.2'
