--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="org.smartregister.chw.hiv.sample">
 
     <application
-        android:name="org.smartregister.chw.hiv.sample.SampleReferralApp"
+        android:name="org.smartregister.chw.hiv.sample.SampleHivApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:theme">
-        <activity android:name="org.smartregister.chw.hiv.sample.activity.HivFormRegistrationActivity">
+        <activity
+            android:name="org.smartregister.chw.hiv.sample.activity.HivFormRegistrationActivity"
+            android:theme="@style/ChwHivTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
