--- a/.tx/config
+++ b/.tx/config
@@ -1,4 +1,7 @@
-[project_slug.resource_slug]
+[main]
+host = https://www.transifex.com
+
+[opensrp-client-chw-hiv.opensrp-chw-hiv-src-main-res-values-strings-xml--master]
 file_filter = opensrp-chw-hiv/src/main/res/values-<lang>/strings.xml
 source_file =  opensrp-chw-hiv/src/main/res/values/strings.xml
 source_lang = en
